Fix alignemnt

--- a/www/static/css/main.css
+++ b/www/static/css/main.css
@@ -256,6 +256,7 @@ body.admin .btn-primary.dropdown-toggle {
 a.back-btn {
   color: #fff;
   padding: 0.5rem 1rem;
+  margin: 0.5rem;
   background: rgba(0, 0, 0, 0);
   border-radius: 0.25rem;
 }
